--- a/web-tracker/package.json
+++ b/web-tracker/package.json
@@ -16,11 +16,14 @@
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://paulTchaa8.github.io/gozem_project",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
