--- a/web-tracker/.env
+++ b/web-tracker/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://127.0.0.1:3000/api
-REACT_APP_BACKEND_URL=http://127.0.0.1:3000
+REACT_APP_API_URL=https://gozem-project.onrender.com/api
+REACT_APP_BACKEND_URL=https://gozem-project.onrender.com
